# Spirit

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  FeuilleRoute.md  Makefile  tmp
cmake_src/: Tools.cmake  (+6 more)
src/: CMakeLists.txt  main.cpp
src/GoblinFactory/: .gitignore  CMakeLists.txt
src/GoblinFactory/cmake/: Config.h.in  sourcelist.cmake  subdirectory.cmake
src/GoblinFactory/include/GF/: GFShader.hpp  GFTexture.hpp
src/GoblinFactory/include/GF_C/: GF2DCircle.hpp  GF2DRectangle.hpp  GF2DScene.hpp  GFColor.hpp  GFDraw_I.hpp  GFWindow.hpp
src/GoblinFactory/include/GLFW_C/: Window.hpp
src/GoblinFactory/include/glad/: glad.h
src/GoblinFactory/include/glm/: Makefile
src/GoblinFactory/src/: gf.cpp
src/GoblinFactory/src/GF/: GFShader.cpp  GFTexture.cpp
src/GoblinFactory/src/GF_C/: GF2DCircle.cpp  GF2DRectangle.cpp  GF2DScene.cpp  GFWindow.cpp
src/GoblinFactory/src/GF_Lab/: Basic2DTest.cpp
src/GoblinFactory/src/GLFW_C/: GLFWObject.cpp  Window.cpp
src/GoblinFactory/src/SC/: CMakeLists.txt  SatisfactoryCalculator.cpp
src/algolab/: Algolab.java  CMakeLists.txt
src/app/: CMakeLists.txt
src/app/drone/: CMakeLists.txt
src/app/gf/: CMakeLists.txt  gf.cpp
src/app/gf/def/: CameraDef.hpp  GappDef.hpp  MeshDef.hpp  ModelDef.hpp  ProgramShaderDef.hpp  SceneDef.hpp  ShaderCodeDef.hpp  ShaderDef.hpp
src/app/ptr_dyna_stat/: ptr_dyna_stat.cpp
src/app/sc/: CMakeLists.txt
src/app/sc/Material/: MaterialForm.hpp
src/app/sc/SC_IntegratedTest/: CMakeLists.txt  SC_IntegratedTest.cpp
src/app/sharedptr/: CMakeLists.txt  main.cpp
src/framework/: CMakeLists.txt
src/framework/s_algorithm/: Algo.hpp  CMakeLists.txt
src/framework/s_algorithm/algosrc/: Normalize.cpp  PerlinNoise.cpp  RandomNoise.cpp
src/framework/s_data/: CMakeLists.txt
src/framework/s_data/DC/: CMakeLists.txt
src/framework/s_data/DC_UnitTest/: CMakeLists.txt  Manager_UnitTest.cpp  TxToTextFileStrategy_UnitTest.cpp
src/framework/s_data/Interface/: Editable.cpp  Editable.hpp  Serializable.cpp  Serializable.hpp  UnserializeException.cpp
src/framework/s_data/Type/: DInt.cpp
src/framework/s_file/: CMakeLists.txt
src/framework/s_file/ppm/: ppm_f.cpp  ppm_obj.cpp  ppm_obj.hpp
src/framework/s_graphics/: CMakeLists.txt
src/framework/s_graphics/appsetting/: AppSetting.hpp
src/framework/s_graphics/camera/: Camera.cpp  Camera.hpp  CameraBuilder.cpp  CameraBuilder.hpp  CameraUpdateDef.hpp  ProjectionDef.hpp
src/framework/s_graphics/color/: ColorDef.hpp  Color_t.hpp
src/framework/s_graphics/component/: Component.hpp  Transform.cpp  Transform.hpp
src/framework/s_graphics/gapp/: AppSetting.hpp  GAppSetting.hpp  Gapp.cpp  Gapp.hpp  GappBuilder.cpp  GappBuilder.hpp
src/framework/s_graphics/gimporter/: GJsonImporter.hpp  GappJsonImporter.cpp  SceneJsonImporter.cpp
src/framework/s_graphics/gobject/: GraphicObject.cpp  GraphicObject.hpp  UGID.cpp  UGID.hpp
src/framework/s_graphics/gres/: RessourceManager.cpp  RessourceManager.hpp  RessourceManager.tpp
src/framework/s_graphics/input/: Input.cpp  Input.hpp  Key.hpp
src/framework/s_graphics/mesh/: Mesh.cpp  Mesh.hpp  MeshBuilder.cpp  MeshBuilder.hpp  MeshTrace.cpp  Vertex.hpp  Vertices.cpp  Vertices.hpp  VerticesDef.hpp  VerticesTrace.cpp
src/framework/s_graphics/model/: GF2DCircle.cpp  GF2DCircle.hpp  GFSphere.hpp  Mesh.cpp  Mesh.hpp  MeshBuilder.cpp  MeshBuilder.hpp  MeshDef.hpp  Model.cpp  Model.hpp  Model.tpp  ModelBuilder.cpp  ModelBuilder.hpp  Sphere.cpp  Vertex.hpp  Vertices.cpp  Vertices.hpp
src/framework/s_graphics/primitive/: GF2DCube.hpp  GF2DTriangle.cpp  GF2DTriangle.hpp  GF3DCube.hpp  GFBoard.hpp  GFData.hpp  GFScene.hpp  Renderable.hpp
src/framework/s_graphics/scene/: Renderable.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneBuilder.cpp  SceneBuilder.hpp  SceneObject.cpp  SceneObject.hpp
src/framework/s_graphics/shader/: ProgramShader.cpp  ProgramShader.hpp  ProgramShaderBuilder.cpp  ProgramShaderBuilder.hpp  Shader.cpp  Shader.hpp  ShaderBuilder.cpp  ShaderBuilder.hpp  ShaderProg.cpp  ShaderProg.hpp  ShaderType.hpp
src/framework/s_graphics/shader_program/: ShaderProg.cpp  ShaderProg.hpp
src/framework/s_graphics/texture/: GLTexture.hpp  ImgLoadSetting.hpp  Texture.cpp  Texture.hpp  TextureBuilder.cpp  TextureBuilder.hpp
src/framework/s_graphics/time/: Time.cpp  Time.hpp
src/framework/s_graphics/ucolor/: GFColor.cpp
src/framework/s_graphics/ugl/: ugl.cpp  ugl.hpp
src/framework/s_graphics/uglad/: uglad.cpp  uglad.hpp
src/framework/s_graphics/uglfw/: uglfw.cpp  uglfw.hpp
src/framework/s_image/pixel_img/: CMakeLists.txt
src/framework/s_platform/: CMakeLists.txt
src/framework/s_platform/builder/: Builder.hpp  Builder.tpp
src/framework/s_platform/debug/: DebugHandler.hpp  Loggers.cpp  Loggers.hpp  Profiler.cpp  Profiler.hpp  Traceable.cpp  Traceable.hpp  Tracer.cpp  Tracer.hpp
src/framework/s_platform/file/: Path.hpp  ReadFile.hpp
src/framework/s_platform/object/: Object.cpp  Object.hpp
src/framework/s_platform/singleton/: Singleton.hpp  Singleton.tpp
src/framework/s_platform/string/: Str.hpp  StrDef.hpp  ToStr.cpp  ToStr.hpp
src/framework/s_shaders/: CMakeLists.txt
src/framework/s_shaders/xlab/: shader.fs  shader.vs
src/framework/s_type/: CMakeLists.txt  FreqState_e.hpp  FreqUpd_e.hpp
src/framework/s_ui/TUI/: CMakeLists.txt
src/ptr_dyna_stat/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/raster_f/ppm/: ppm_f.cpp  ppm_obj.cpp  ppm_obj.hpp
src/sandbox/: CMakeLists.txt  main.cpp
src/tensub/: package-lock.json  package.json  tensub.js
src/tests/: CMakeLists.txt  CTestTestfile.cmake
src/tests/graphic/primitives/: Basic2DTest.hpp
src/tests/integration/: CMakeLists.txt
src/tests/integration/algorithm/: CMakeLists.txt
src/tests/integration/graphics/: CMakeLists.txt
src/tests/ppm_tests/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  ppm_obj_test.cpp  ppm_test[1]_include.cmake  ppm_tests.cpp
src/tests/unittest/: CMakeLists.txt
src/utility/: CMakeLists.txt
src/utility/java_utility/: CMakeLists.txt  MANIFEST.MF
(+711 files in other folders)
